# openstacksdk

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .gitreview  .mailmap  .nosetests  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  SHADE-MERGE-TODO.rst  auth.py  bindep.txt  client.py  create_yaml.sh  fixgates.txt  include-acceptance-regular-user.txt  lower-constraints.txt  openstack-common.conf  post_test_hook.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
api_strawman/: README.rst  client.py
shade/: .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  __init__.py  _adapter.py  _legacy_clients.py  _normalize.py  _tasks.py  _utils.py  exc.py  inventory.py  meta.py  openstackcloud.py  operatorcloud.py  setup.cfg  task_manager.py  test-requirements.txt
shade/_heat/: environment_format.py  event_utils.py  template_format.py  template_utils.py  utils.py
shade/cmd/: inventory.py
shade/devstack/: plugin.sh
shade/doc/source/contributor/: coding.rst
shade/doc/source/install/: index.rst
shade/doc/source/user/: index.rst  logging.rst  microversions.rst  model.rst  multi-cloud-demo.rst
shade/doc/source/user/examples/: create-server-name-or-id.py  debug-logging.py  http-debug-logging.py  munch-dict-object.py  normalization.py  service-conditional-overrides.py  service-conditionals.py
shade/extras/: install-tips.sh  run-ansible-tests.sh
shade/releasenotes/notes/: add_server_group_support-dfa472e3dae7d34d.yaml  added-senlin-support-1eb4e47c31258f66.yaml  cache-in-use-volumes-c7fa8bb378106fe3.yaml  compute-quotas-b07a0f24dfac8444.yaml  compute-usage-defaults-5f5b2936f17ff400.yaml  endpoint-from-catalog-bad36cb0409a4e6a.yaml  fix-properties-key-conflict-2161ca1faaad6731.yaml  get-usage-72d249ff790d1b8f.yaml  net_provider-dd64b697476b7094.yaml  update_endpoint-f87c1f42d0c0d1ef.yaml  volume-types-a07a14ae668e7dd2.yaml
shade/releasenotes/source/: unreleased.rst
shade/shade/: _adapter.py  _normalize.py  _tasks.py  _utils.py  inventory.py  openstackcloud.py  task_manager.py
shade/shade/tests/: fakes.py
shade/shade/tests/ansible/: run.yml
shade/shade/tests/functional/: test_cluster_templates.py  test_devstack.py  test_flavor.py  test_identity.py  test_inventory.py  test_keypairs.py  test_limits.py  test_magnum_services.py  test_network.py  test_object.py  test_port.py  test_qos_bandwidth_limit_rule.py  test_qos_dscp_marking_rule.py  test_qos_policy.py  test_quotas.py  test_range_search.py  test_recordset.py  test_router.py  test_security_groups.py  test_server_group.py  test_stack.py  test_usage.py  test_volume_backup.py  util.py
shade/shade/tests/functional/hooks/: post_test_hook.sh
shade/shade/tests/unit/: test__utils.py  test_aggregate.py  test_availability_zones.py  test_cluster_templates.py  test_delete_volume_snapshot.py  test_endpoints.py  test_flavors.py  test_floating_ip_neutron.py  test_identity_roles.py  test_image.py  test_inventory.py  test_keypair.py  test_normalize.py  test_port.py  test_project.py  test_quotas.py  test_router.py  test_security_groups.py  test_server_console.py  test_server_delete_metadata.py  test_services.py  test_shade_operator.py  test_subnet.py  test_update_server.py  test_users.py  test_volume.py  test_volume_backups.py  test_zone.py
shade/shade/tests/unit/fixtures/: dns.json  image-version-v1.json
shade/shade/tests/unit/fixtures/clouds/: clouds_cache.yaml
shade/tests/: base.py  fakes.py  test_meta.py  test_shade.py
shade/tests/ansible/: README.txt  run.yml
shade/tests/ansible/hooks/: post_test_hook.sh
shade/tests/ansible/roles/group/tasks/: main.yml
shade/tests/ansible/roles/keypair/tasks/: main.yml
shade/tests/ansible/roles/network/tasks/: main.yml
shade/tests/ansible/roles/network/vars/: main.yml
shade/tests/ansible/roles/port/tasks/: main.yml
shade/tests/ansible/roles/router/tasks/: main.yml
shade/tests/ansible/roles/router/vars/: main.yml
shade/tests/ansible/roles/server/tasks/: main.yml
shade/tests/functional/: base.py  test_aggregate.py  test_baymodels.py  test_cluster_templates.py  test_clustering.py  test_compute.py  test_devstack.py  test_domain.py  test_endpoints.py  test_flavor.py  test_floating_ip.py  test_floating_ip_pool.py  test_groups.py  test_identity.py  test_image.py  test_inventory.py  test_limits.py  test_magnum_services.py  test_network.py  test_object.py  test_port.py  test_project.py  test_qos_minimum_bandwidth_rule.py  test_quotas.py  test_range_search.py  test_recordset.py  test_router.py  test_security_groups.py  test_server_group.py  test_services.py  test_stack.py  test_usage.py  test_users.py  test_volume.py  test_volume_backup.py  test_volume_type.py  test_zone.py  util.py
shade/tests/functional/hooks/: post_test_hook.sh
shade/tests/unit/: base.py  test__adapter.py  test__utils.py  test_aggregate.py  test_baremetal_node.py  test_baymodels.py  test_caching.py  test_cluster_templates.py  test_clustering.py  test_create_server.py  test_create_volume_snapshot.py  test_delete_server.py  test_delete_volume_snapshot.py  test_domain_params.py  test_domains.py  test_endpoints.py  test_flavors.py  test_floating_ip_common.py  test_floating_ip_neutron.py  test_floating_ip_nova.py  test_floating_ip_pool.py  test_groups.py  test_identity_domains.py  test_identity_roles.py  test_image.py  test_image_snapshot.py  test_inventory.py  test_keypair.py  test_limits.py  test_magnum_services.py  test_meta.py  test_network.py  test_normalize.py  test_object.py  test_operator_noauth.py  test_port.py  test_project.py  test_qos_bandwidth_limit_rule.py  test_qos_dscp_marking_rule.py  test_qos_minimum_bandwidth_rule.py  (+25 more)
shade/tests/unit/fixtures/: catalog-v2.json  catalog-v3.json  catalog-versioned-image.json  catalog.json  clustering.json  discovery.json  dns.json  image-version-broken.json  image-version-v1.json  image-version-v2.json  image-version.json  network-version.json  test_create_flavor.yaml
shade/tests/unit/fixtures/clouds/: clouds.yaml  clouds_cache.yaml
(+3193 files in other folders)
