[metadata]
name = openstacksdk
summary = An SDK for building applications to work with OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/openstacksdk/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
python-requires = >=3.5

[files]
packages =
    openstack

# TODO(mordred) Move this to an OSC command before 1.0
[entry_points]
console_scripts =
    openstack-inventory = openstack.cloud.cmd.inventory:main
