[metadata]
name = openstacksdk
summary = An SDK for building applications to work with OpenStack
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/openstacksdk/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
python_requires = >=3.7

[files]
packages =
    openstack

# TODO(mordred) Move this to an OSC command before 1.0
[entry_points]
console_scripts =
    openstack-inventory = openstack.cloud.cmd.inventory:main

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
# follow_imports = normal
follow_imports = skip
incremental = true
check_untyped_defs = true
warn_unused_ignores = false
# keep this in-sync with 'mypy.exclude' in '.pre-commit-config.yaml'
# TODO(stephenfin) Eventually we should remove everything here except the
# unit tests module
exclude = (?x)(
    openstack/tests/ansible
    | openstack/tests/functional
    | openstack/tests/unit
    | openstack/tests/fixtures.py
    | openstack/cloud
    | openstack/fixture
    | doc
    | examples
    | releasenotes
  )
