[metadata]
name = openstacksdk
summary = An SDK for building applications to work with OpenStack
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/openstacksdk/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    openstack

# TODO(mordred) Move this to an OSC command before 1.0
[entry_points]
console_scripts =
    openstack-inventory = openstack.cloud.cmd.inventory:main
